<resources>
    <string name="app_name">RoomDemo</string>
    <string name="not_assigned">Not assigned</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="find">Find</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="contact_name">Contact Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
</resources>